[metadata]
name = PDFU
version = 0.2.1
author = YM162
author_email = david.fontaneda@estudiante.uam.es
description = PDF Unembedder for PDFPage objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YM162/PDFU
project_urls =
    Bug Tracker = https://github.com/YM162/PDFU/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    pdfrw>=0.4
    pikepdf>=5.1.2

packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    pdfu = PDFU.command_line:main