[package]
name = "gulagcleaner_python"
version = "0.10.0"
edition = "2021"
authors = ["YM162 <david.fontaneda16@gmail.com>"]
description = "Ad removal tool for PDFs."
readme = "../README.md"
homepage = "https://github.com/YM162/gulag-cleaner-cli"
repository = "https://github.com/YM162/gulag-cleaner-cli.git"
license-file = "../LICENSE"
keywords = ["wuolah", "pdf", "ads", "advertisments", "cleaner", "gulagcleaner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gulagcleaner_python"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
gulagcleaner_rs = { path = "../gulagcleaner_rs" }