[package]
name = "gulagcleaner_rs"
version = "0.10.3"
edition = "2021"
authors = ["YM162 <david.fontaneda16@gmail.com>"]
description = "Ad removal tool for PDFs."
readme = "../README.md"
homepage = "https://github.com/YM162/gulag-cleaner-cli"
repository = "https://github.com/YM162/gulag-cleaner-cli.git"
license = "GPL-3.0"
keywords = ["wuolah", "pdf", "ads", "advertisments", "gulagcleaner"]

[lib]
name = "gulagcleaner_rs"

[dependencies]
flate2 = "1.0.27"
lopdf = "0.31.0"
