[package]
name = "gulagcleaner_wasm"
version = "0.10.2"
edition = "2021"
authors = ["YM162 <david.fontaneda16@gmail.com>"]
description = "Ad removal tool for PDFs."
readme = "../README.md"
homepage = "https://github.com/YM162/gulag-cleaner-cli"
repository = "https://github.com/YM162/gulag-cleaner-cli.git"
license = "GPL-3.0"
keywords = ["wuolah", "pdf", "ads", "advertisments", "gulagcleaner"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
gulagcleaner_rs = { path = "../gulagcleaner_rs" }